Development history / change log, please read from bottom up

Version 3.4.3 - xx yy 2020
Generic changes/fixes
	* fix display problem of geo-coordinates in degree curve compare

Device specific changes/fixes
	* OnLineCommander - add initial support

Version 3.4.2 - 04 Aug 2020
Generic changes/fixes
	* fix cell voltage dialog adjusting value position
	* remove guava-jre, joda-time dependency
	* add several missing license files
	* add option to force 10 major scale ticks while rounding graphics end values
	* enable class based log level configuration device sub packages (p.e. gde.device.junsi.modbus)
	* enable USB HID device selection while devices with almost identical characteristics connected
	* enable secondary trigger range in properties editor (functional added in 3.4.0)
	* add JAVA_IO_TMPDIR GDE cleanup tree (exported help files)
	* macOS build - add code signing app and dmg to fulfill gatekeeper requirements
	* add Java version check, detect run time version out of specified range
	* update jSerialComm to version 2.6.2
	* use system cursor for measuring to avoid misplaced cursor while sized desktop
	* documentation update
	* remove leading blanks while CSV relative time export
	* fix GPS export make LookAt section related
	* fix display problem of geo-coordinates in curve compare
	* add macOS touch bar support
	* documentation update
	
Device specific changes/fixes
	* iChargerUSB - enable program memory control
	* iChargerUSB - correct power/energy calculation for opened files (*.osd)
	* iChargerUSB - add system info string to recording
	* iChargerUSB - fix parsing error battery voltage > 25,4 Volts
	* iCharger S6/X12 - add support
	* GPS_Logger* - fix latitude, longitude unit which caused display problem while activated
	* Spektrum-Telemetry - make frame loss and holds always visible, even no reasonable data
	* UniSens-E - enable live data gathering
	* iMax B6* - fix missing energy calculation Ni battery type outside cycle