@@ -110,6 +110,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_rx</label>
             </Measurement>
             <Measurement>
@@ -1068,6 +1069,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_rx</label>
             </Measurement>
             <Measurement>
@@ -2090,6 +2092,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_rx</label>
             </Measurement>
             <Measurement>
@@ -3104,6 +3107,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
             </Measurement>
             <Measurement>
                 <name>voltage_rx_min</name>
@@ -4065,6 +4069,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_rx</label>
             </Measurement>
             <Measurement>
@@ -5081,6 +5086,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
             </Measurement>
             <Measurement>
                 <name>voltage_rx_min</name>
