@@ -96,6 +96,7 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+               <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
             </Measurement>
             <Measurement>
                 <name>altitude (relativ)</name>
